# my-slab-server

./: app.py  pyproject.toml  requirements.txt  wsgi.py
templates/: slab_detail.html
