[tool.poetry]
name = "my-slab-server"
version = "0.1.0"
description = ""
authors = ["Mehdi <mehdi@example.com>"]
package-mode = false  # این خط رو زیر [tool.poetry] بذار

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.1"
pillow = "^10.4.0"

[tool.poetry.group.dev.dependencies]
# Add dev dependencies if any
