[tool.poetry]
name = "my-slab-server"
version = "0.1.0"
description = ""
authors = ["Mehdi <mehdi@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.1"
pillow = "^10.4.0"
qrcode = "^7.4.2"

[tool.poetry.group.dev.dependencies]
# Add dev dependencies if any
